# tg_bot_event_remindres

./: .env.dist  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/config/: __init__.py  app_config.py  config_loader.py  db_config.py
app/db_api/: db_session.py  for_alembic.py
app/db_api/models/: base_model.py  events.py  users.py
app/db_api/repositories/: base_repo.py  events.py  users.py
migrations/: env.py
migrations/versions/: 20b62b658fed_tg_id_unique.py  70224f0743b1_event_title_unique.py  837db3758e2a_event_model.py  b62dfbefe673_users.py
